test_programs/compile_failure/noirc_frontend_tests_enums_match_no_shadow_global/src/main.nr

        fn main() {
            match 2 {
                crate::foo => (),
            }
        }

        fn foo() {}
    